--- a/page_/styles.css
+++ b/page_/styles.css
@@ -50,7 +50,6 @@ border-radius: 50%;
 display: grid;
 place-items: center;
 cursor: pointer;
-box-shadow: 0 0 33px 3px rgba(230, 12, 12, 0.34);
 line-height: 1;
 }
 
@@ -173,22 +172,19 @@ h1{
 }
 
 .palabra {
-    font-size: 24px;
     overflow: hidden;
     white-space: nowrap;
-    border-right: 2px solid #535353fa;
-    animation: escribiendo 3s steps(25) forwards, parpadeo 2s infinite 3s;
+    border-right: 1px solid #535353fa;
+    animation: escribiendo 2s steps(16) forwards, parpadeo 2s infinite 3s;
     margin-right: 2px;
-    display: inline-block; 
-    max-width: 180px;
 }
 
 @keyframes escribiendo {
     from {
-        width: 0;
+        width: 0ch;
     }
     to {
-        width: 180px;
+        width: 16ch;
     }
 }
 
